syntax = "proto3";

package user;

option go_package = "github.com/enkazu1116/go_home/internal/pb;pb";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

message User {
  string id = 1;
  string authId = 2;
  string name = 3;
  string email = 4;
  string role = 5;
  google.protobuf.Timestamp createdAt = 6;
  google.protobuf.Timestamp updatedAt = 7;
  google.protobuf.Timestamp deletedAt = 8;
}

message CreateUserRequest {
  string authId = 1;
  string name = 2;
  string email = 3;
  string role = 4;
}
message CreateUserResponse {
  User user = 1;
}

message ListUsersResponse {
  repeated User users = 1;
}

message GetUserRequest {
  string id = 1;
}
message GetUserResponse {
  User user = 1;
}

message UpdateUserRequest {
  User user = 1;
}
message UpdateUserResponse {
  User user = 1;
}

message DeleteUserRequest {
  string id = 1;
}

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc ListUsers(google.protobuf.Empty) returns (ListUsersResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty);
}